--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="/css/style.min.css">
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer, localizada em Campinas/SP">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <title>Desenvolvedor e Designer</title>
 
 </head>
